[package]
name = "meta_miner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["cargo"] }
csv = "1.1"
regex = "1"
lazy_static = "1.4"
bit-set = "0.5.3"
serde = { verison = "1.0", features = ["derive"]}
toml = "0.7.3"
serde_json = "1"
log = "0.4.0"
env_logger = "0.10"
